# Lumin

./: .grep_out  ARCHITECTURE.md  README.md  bump_text.js  desktop_boilerplate.py  fix-bg.cjs  fix-bg2.cjs  grep_out  index.html  metadata.json  package-lock.json  package.json  script.ts
electron/: main.cjs  preload.cjs
public/: manifest.json
src/: App.tsx  index.css
src/components/: PDFRenderer.tsx  PerfManagerModal.tsx
win32_native/: CMakeLists.txt  Cargo.toml  README_NATIVE_WINDOWS.md
win32_native/cpp_core/: render_engine.cpp  video_decoder.cpp
win32_native/src/: main.rs
