[package]
name = "lumin-windows-native-core"
version = "1.0.0"
edition = "2021"
authors = ["LUMIN Media <david@davidboni.es>"]
description = "Win32 low-latency engine bypass for LUMIN on Windows 10/11"

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "windef", "wingdi", "winbase"] }
vulkano = "0.33"
ffmpeg-next = "6.0"
